@@ -128,6 +128,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|CommonAdminParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|NamedList
@@ -219,6 +235,24 @@ operator|.
 name|CollectionAction
 operator|.
 name|DELETEREPLICA
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|CommonAdminParams
+operator|.
+name|ASYNC
 import|;
 end_import
 
@@ -366,6 +400,13 @@ argument_list|,
 name|ocmh
 argument_list|,
 name|node
+argument_list|,
+name|message
+operator|.
+name|getStr
+argument_list|(
+name|ASYNC
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -391,6 +432,9 @@ name|ocmh
 parameter_list|,
 name|String
 name|node
+parameter_list|,
+name|String
+name|async
 parameter_list|)
 throws|throws
 name|InterruptedException
@@ -415,25 +459,35 @@ range|:
 name|sourceReplicas
 control|)
 block|{
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"Deleting replica for collection={} shard={} on node={}"
-argument_list|,
+name|String
+name|coll
+init|=
 name|sourceReplica
 operator|.
 name|getStr
 argument_list|(
 name|COLLECTION_PROP
 argument_list|)
-argument_list|,
+decl_stmt|;
+name|String
+name|shard
+init|=
 name|sourceReplica
 operator|.
 name|getStr
 argument_list|(
 name|SHARD_ID_PROP
 argument_list|)
+decl_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Deleting replica for collection={} shard={} on node={}"
+argument_list|,
+name|coll
+argument_list|,
+name|shard
 argument_list|,
 name|node
 argument_list|)
@@ -447,6 +501,23 @@ argument_list|()
 decl_stmt|;
 try|try
 block|{
+if|if
+condition|(
+name|async
+operator|!=
+literal|null
+condition|)
+name|sourceReplica
+operator|=
+name|sourceReplica
+operator|.
+name|plus
+argument_list|(
+name|ASYNC
+argument_list|,
+name|async
+argument_list|)
+expr_stmt|;
 operator|(
 operator|(
 name|DeleteReplicaCmd
@@ -519,19 +590,9 @@ literal|"Failed to delete replica for collection=%s shard=%s"
 operator|+
 literal|" on node=%s"
 argument_list|,
-name|sourceReplica
-operator|.
-name|getStr
-argument_list|(
-name|COLLECTION_PROP
-argument_list|)
+name|coll
 argument_list|,
-name|sourceReplica
-operator|.
-name|getStr
-argument_list|(
-name|SHARD_ID_PROP
-argument_list|)
+name|shard
 argument_list|,
 name|node
 argument_list|)
