@@ -228,6 +228,22 @@ name|common
 operator|.
 name|params
 operator|.
+name|CommonAdminParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|CoreAdminParams
 import|;
 end_import
@@ -245,6 +261,22 @@ operator|.
 name|util
 operator|.
 name|NamedList
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|StrUtils
 import|;
 end_import
 
@@ -313,6 +345,42 @@ operator|.
 name|ZkStateReader
 operator|.
 name|SHARD_ID_PROP
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|CommonAdminParams
+operator|.
+name|ASYNC
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|StrUtils
+operator|.
+name|formatString
 import|;
 end_import
 
@@ -422,6 +490,16 @@ operator|.
 name|getStr
 argument_list|(
 literal|"target"
+argument_list|)
+decl_stmt|;
+name|String
+name|async
+init|=
+name|message
+operator|.
+name|getStr
+argument_list|(
+literal|"async"
 argument_list|)
 decl_stmt|;
 name|boolean
@@ -611,6 +689,24 @@ argument_list|,
 name|target
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|async
+operator|!=
+literal|null
+condition|)
+name|msg
+operator|.
+name|getProperties
+argument_list|()
+operator|.
+name|put
+argument_list|(
+name|ASYNC
+argument_list|,
+name|async
+argument_list|)
+expr_stmt|;
 specifier|final
 name|ZkNodeProps
 name|addedReplica
@@ -964,6 +1060,8 @@ argument_list|,
 name|ocmh
 argument_list|,
 name|source
+argument_list|,
+name|async
 argument_list|)
 expr_stmt|;
 name|results
